[package]
name = "validator-document-service"
version = "0.2.0"
authors = [
    "XOR·APPS <developers@xorapps.network>",
    "M81 Network <support@m81.network>",
]
edition = "2021"
license = "AGPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.21.0"
borsh = "0.9.3"
percy-dom = "0.9.1"
qrcode-generator = "4.1.7"
smol = "1.3.0"
xor-image-handler = { git = "https://github.com/xorapps/xor-image-handler.git" }
xor-mailer-common = { git = "https://github.com/xorapps/XOR-MAILER.git" }
xor-mailer = { git = "https://github.com/xorapps/XOR-MAILER.git" }
